May 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add Troopers custom arguments for UT2004 (patch by Andreas Schneider)

May 23, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- enable custom args for all games
- add RedOrchestra custom arguments for UT2004

May 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- replace no longer working Tribes2 master server addresses with
  current ones (#954570)

May 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- create LaunchInfo.txt by default
- when suggesting a command, don't add full path (since it will be found in
  $PATH anyway)
- clean up resolve_path. Let it do path and tilde expansion and don't suggest
  directories in $PATH.
- fix some minor memory leaks
- export the variables XQF_SERVER_NAME, XQF_SERVER_MAP, XQF_SERVER_HOSTNAME and
  XQF_SERVER_GAME when launching a game (suggested by Ruediger Meier)
- don't inherit some tags from base game, e.g. suggested commands
- use steam1.steampowered.com and steam2.steampowered.com as steam master

May 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- support for Half-Life steam master. Nasty hack, hopefully doesn't break other stuff.
- set anti-cheat flag for VAC (secure != 0)
- increase version to 0.9.14.1
- redial also when only private slots are free and no password is set
  (suggested by John Stotler)
- default_home and main_mods (e.g. baseq3) tags in games.xml
- support custom config in all Q3A based games (suggested by Ruediger Meier)
- fix fs_game for RTCW, offer it for ET (reported by Ruediger Meier)

Mar 30, 2004: Jordi Mallach <jordi@sindominio.net>
- add Russian translation by Dan Korostelev <dan@ats.energo.ru>.

Mar 22, 2004: Jordi Mallach <jordi@sindominio.net>
- fix clean rule in toplevel Makefile.am.

Mar 21, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.14

Mar 20, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- load GeoIP.dat from location specified in environment variable xqf_GEOIPDAT
